WIP: added several fixeds and responsing according to newShift flow

--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -51,3 +51,9 @@
     color: $turnex-alabaster-800;
   }
 }
+
+@media (max-width: $turnex-breakpoint-xs) {
+  .button {
+    max-width: none;
+  }
+}
