--- a/src/app/components/title/title.component.scss
+++ b/src/app/components/title/title.component.scss
@@ -2,10 +2,17 @@
 
 .title {
   color: $turnex-alabaster-950;
-  @include Rubik();;
+  @include Rubik();
   font-size: $turnex-spacing-36;
   font-style: normal;
   font-weight: bold;
   line-height: 40px;
   margin-bottom: 4px;
+}
+
+@media (max-width: $turnex-breakpoint-xs) {
+  .title {
+    font-size: $turnex-spacing-20;
+    line-height: $turnex-spacing-24;
+  }
 }
